#Nmap Changelog ($Id$); -*-text-*-

Nmap 7.98 [2025-08-21]

o [SECURITY] Rebuilt the Windows self-installer with NSIS 3.11, addressing
  CVE-2025-43715--a race condition in earlier NSIS versions that could allow
  local attackers to escalate to SYSTEM privileges when a vulnerable installer is
  run as SYSTEM. The Nmap installer does not run as SYSTEM by default.

o Upgraded included libraries: OpenSSL 3.0.17, Lua 5.4.8

o [Windows] Upgraded the included version of Npcap from 1.82 to 1.83, improving
  compatibility with PPPoE connections. See https://npcap.com/changelog

o [macOS][GH#3127] Fix "dnet: Failed to open device en0" errors on macOS since
  Nmap 7.96. [Daniel Miller]

o Fixed an issue in FTP bounce scan where a single null byte is written past
  the end of the receive buffer. The issue is triggered by a malicious server
  but does not cause a crash with default builds. [Tyler Zars]

o [GH#3130] Fix a crash (stack exhaustion due to excessive recursion) in the
  parallel DNS resolver. Additionally, improved performance by processing
  responses that come after the request has timed out. [Daniel Miller]

o [GH#2148] Fix the error, "Assertion failed: (datalink == DLT_EN10MB), function begin_sniffer, file scan_engine_raw.cc"
  when using Nmap with certain VPN interfaces. [Daniel Miller]

o [GH#2757] Fix a crash in traceroute when using randomly-generated decoys:
  "Assertion `source->ss_family == AF_INET' failed" [Daniel Miller]

o [GH#2899] When IP protocol scanning on IPv6 (-sO -6), skip protocol numbers
  that are registered as Extension Header values. When the --data option was
  used, these would fail the assertion "len == (u32) ntohs(ip6->ip6_plen)"
  [Daniel Miller]

o [GH#3086] Prevent TCP Connect scan (-sT) from leaking one socket per
  hostgroup, which led to progressively slower scans and assertion failures in
  other scan phases. [Daniel Miller]
